# ideas

./: README.md  action_template.py  query_functions.md  schema.yml  schema_processing.py
nl_sql_maker/: .gitignore  Containerfile  GoldenPhrasePrompts.md  PharserExpansion.md  README.md  RuntimePlan.md  alias_dictionary.yaml  cli_test.sh  cli_tests.sh  create_pdf_archive.py  generate_db.py  goldens.yaml  keywords_and_functions.yaml  make_schema.py  phrase_explorer.yaml  podman-compose.yaml  project_to_prompt.py  pyproject.toml  requirements.txt  schema.yaml
nl_sql_maker/src/vbg_generate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  (+1 more)
nl_sql_maker/tests/: conftest.py  test_artifact_helpers_unit.py  test_artifact_loading_runtime.py  test_artifact_shape.py  test_binder_runtime.py  test_cli_runtime.py  test_config_runtime.py  test_constraints_in_operator_forms.py  test_create_cli_test.py  test_cypher_helper.py  test_db_exec.py  test_diagnostics_runtime.py  test_grammar_compile.py  test_grammar_validator.py  test_graph_runtime.py  test_input_structure_validation.py  test_last_run_data_quality.py  test_nl2sql_engine.py  test_normalization_runtime.py  test_normalizer.py  test_parser_runtime.py  test_phase_i_helpers.py  test_phase_j_helpers.py  test_runtime_canonical_contract.py  test_runtime_constraints.py  test_runtime_helper.py  test_runtime_nlp.py  test_sql_emitter.py  test_sql_helpers.py  test_surface_pipeline.py  test_surfaces_phrase_factory_unit.py  test_surfaces_pipeline_unit.py  test_surfaces_spec_builder_unit.py  test_synth_artifacts_unit.py
(+26 files in other folders)
